--- a/index.html
+++ b/index.html
@@ -49,30 +49,30 @@
     <section>
         <h2 class="section-title">Порівняння комп'ютерної та людської пам'яті</h2>
         <p>У масовій свідомості пам'ять досі сприймається як аналог жорсткого диска, менш точний і надійний. Ця аналогія докорінно невірна. Майже за всіма властивостями людська пам'ять принципово відрізняється від машинної.</p>
-        <p>Здійснимо їх порівняння за декількома показниками:</p>
+        <h2>Здійснимо їх порівняння за декількома показниками:</h2>
         <ul>
             <li>
-                <h2>Енергонезалежність</h2>
+                <h3>Енергонезалежність</h3>
                 <p></p>
             </li>
             <li>
-                <h2>Обсяг пам'яті</h2>
+                <h3>Обсяг пам'яті</h3>
                 <p></p>
             </li>
             <li>
-                <h2>Стандарт обміну даними</h2>
+                <h3>Стандарт обміну даними</h3>
                 <p></p>
             </li>
             <li>
-                <h2>Засоби зберігання даних</h2>
+                <h3>Засоби зберігання даних</h3>
                 <p></p>
             </li>
             <li>
-                <h2>Файлова система</h2>
+                <h3>Файлова система</h3>
                 <p></p>
             </li>
             <li>
-                <h2>Надійність</h2>
+                <h3>Надійність</h3>
                 <p></p>
             </li>
         </ul>
