--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </p>
         <ul>
             <li>
-                <p>Відчуття – відображення властивостей реальності, що виникає внаслідок впливу їх на органи почуттів та порушення нервових центрів головного мозку.</p>
+                <p><span>Відчуття</span> – відображення властивостей реальності, що виникає внаслідок впливу їх на органи почуттів та порушення нервових центрів головного мозку.</p>
             </li>
             <li>
-                <p>Мислення:
-                    -це вищий пізнавальний процес.
-                    -це рух ідей, що розкриває суть речей. Його результатом є образ, а деяка думка, ідея.
-                    -Мислення - найвищий ступінь людського пізнання.</p>
+                <h3>Мислення:</h3>
+                    <p>-це вищий пізнавальний процес.</p>
+                    <p>-це рух ідей, що розкриває суть речей. Його результатом є образ, а деяка думка, ідея.</p>
+                    <p>-Мислення - найвищий ступінь людського пізнання.</p>
             </li>
             <li>
                 <p>Увага - це здатність людини сконцентрувати свої «пізнавальні процеси» і одному об'єкті з метою його вивчення (пізнання).</p>
